# opinionated-bottle

./: .gitignore  pyproject.toml  requirements.txt
.vercel/: project.json
api/: index.py
opinionated_bottle/: settings.py
opinionated_bottle/console/: run.py
opinionated_bottle/server/: server.py
tests/: test_opinionated_bottle.py
