[tool.poetry]
name = "opinionated-bottle"
version = "0.1.0"
description = "An Opinionated Bottle template"
authors = ["Juan Olvera <juan@jolvera.dev>"]

[tool.poetry.scripts]
opinionated_bottle = "opinionated_bottle.console.run:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
bottle = "^0.12.19"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
